configure express-validator

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "express-hbs": "^2.0.2",
+    "express-session": "^1.15.6",
     "express-validator": "^5.3.1"
   },
   "devDependencies": {},
